--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.infosys.infytel</groupId>
+	<groupId>com.friend.family</groupId>
 	<artifactId>FriendFamilyMS</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Friend-Family-Microservice</name>
-	<description>InfyTel Friend and Family Microservice</description>
+	<description>Friend and Family Microservice</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
